--- a/FasTagApi/Views/Home/IndexMobile.cshtml
+++ b/FasTagApi/Views/Home/IndexMobile.cshtml
@@ -11,6 +11,10 @@
         font-size: 0.9rem; /* Reduce font size for the entire page */
     }
 
+    .hide-column {
+        display: none;
+    }
+
     .table {
         margin-top: 20px;
         background-color: #ffffff;
@@ -93,6 +97,26 @@
     .fw-bold {
         font-weight: bold;
     }
+
+    #searchInput {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        padding: 10px;
+        font-size: 1rem;
+        width: 100%;
+        height: 35px;
+        box-sizing: border-box;
+        border: 1px solid #17a2b8;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.3s ease;
+        margin-left: 1000px;
+    }
+
+        #searchInput:focus {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            outline: none;
+        }
 </style>
 
 <script>
@@ -100,6 +124,29 @@
     setInterval(function () {
         location.reload();
     }, 60000); // 60000 milliseconds = 60 seconds
+    function searchTable() {
+        // Declare variables
+        var input, filter, table, tr, td, i, j, txtValue;
+        input = document.getElementById("searchInput");
+        filter = input.value.toLowerCase();
+        table = document.querySelector(".table");
+        tr = table.getElementsByTagName("tr");
+
+        // Loop through all table rows, and hide those who don't match the search query
+        for (i = 1; i < tr.length; i++) {
+            tr[i].style.display = "none";
+            td = tr[i].getElementsByTagName("td");
+            for (j = 0; j < td.length; j++) {
+                if (td[j]) {
+                    txtValue = td[j].textContent || td[j].innerText;
+                    if (txtValue.toLowerCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                        break;
+                    }
+                }
+            }
+        }
+    }
 </script>
 @if (TempData["SuccessMessage"] != null)
 {
@@ -111,12 +158,13 @@
     <div class="container-fluid mt-4">
         <h2><span class="title-span">Fastag Mobile Number Changed Details</span></h2>
         @Html.ActionLink("Fastag Recharge Details", "Index", "", new { @class = "btn btn-info btn-sm" })
+        <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for records..">
         <form id="deleteForm">
             <table class="table table-striped table-bordered">
                 <thead class="text-bg-info ">
                     <tr>
                         <th>Edit</th>
-                        <th>@Html.DisplayNameFor(model => model.S_NO)</th>
+                        <th class="hide-column">@Html.DisplayNameFor(model => model.S_NO)</th>
                         <th>@Html.DisplayNameFor(model => model.VehicleNumber)</th>
                         <th>@Html.DisplayNameFor(model => model.OldMobileNumber)</th>
                         <th>@Html.DisplayNameFor(model => model.NewMobileNumber)</th>
@@ -132,7 +180,7 @@
                             <td>
                                 @Html.ActionLink("Edit", "EditM", new { id = item.S_NO }, new { @class = "btn btn-primary btn-sm" })
                             </td>
-                            <td>@Html.DisplayFor(modelItem => item.S_NO)</td>
+                            <td class="hide-column">@Html.DisplayFor(modelItem => item.S_NO)</td>
                             <td>@Html.DisplayFor(modelItem => item.VehicleNumber)</td>
                             <td>@Html.DisplayFor(modelItem => item.OldMobileNumber)</td>
                             <td>@Html.DisplayFor(modelItem => item.NewMobileNumber)</td>
